; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_get_dirid_subst.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_get_dirid_subst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inf_file = type { i32 }

@DIRID_SRCPATH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.inf_file*, i32, i32*)* @get_dirid_subst to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_dirid_subst(%struct.inf_file* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.inf_file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store %struct.inf_file* %0, %struct.inf_file** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @DIRID_SRCPATH, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load %struct.inf_file*, %struct.inf_file** %5, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i32* @get_inf_dir(%struct.inf_file* %13, i32* %14)
  store i32* %15, i32** %4, align 8
  br label %27

16:                                               ; preds = %3
  %17 = load i32, i32* %6, align 4
  %18 = call i32* @DIRID_get_string(i32 %17)
  store i32* %18, i32** %8, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @strlenW(i32* %22)
  %24 = load i32*, i32** %7, align 8
  store i32 %23, i32* %24, align 4
  br label %25

25:                                               ; preds = %21, %16
  %26 = load i32*, i32** %8, align 8
  store i32* %26, i32** %4, align 8
  br label %27

27:                                               ; preds = %25, %12
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

declare dso_local i32* @get_inf_dir(%struct.inf_file*, i32*) #1

declare dso_local i32* @DIRID_get_string(i32) #1

declare dso_local i32 @strlenW(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
